# guile-ssh

./: .dir-locals.el  .gitignore  ARCHITECTURE.org  AUTHORS  CODE_OF_CONDUCT.org  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac  guix.scm
.github/: FUNDING.yml
.github/workflows/: fedora.yml  guile2.2.yml  guile3.0.yml  guix.yml
.guix/: manifest.scm
.guix/modules/: guile-ssh-packages.scm
am/: Makefile.am  guilec  snarf
build-aux/: .gitignore  Makefile.am  compile  config.rpath
build-aux/am/: Makefile.am  guile.am  snarf
build-aux/m4/: Makefile.am
doc/: .gitignore  Makefile.am  api-agent.texi  api-auth.texi  api-channels.texi  api-dist.texi  api-keys.texi  api-logging.texi  api-messages.texi  api-popen.texi  api-servers.texi  api-sessions.texi  api-sftp.texi  api-shell.texi  api-tunnels.texi  api-version.texi  examples.texi  guile-ssh.texi  indices.texi  version.texi
examples/: .gitignore  Makefile.am  README  pg-tunnel.scm  pg-tunnel.scm.in  rrepl.scm.in  sscp.scm.in  sssh.scm  sssh.scm.in  ssshd.scm  ssshd.scm.in  uptop.scm.in
examples/echo/: client.scm  client.scm.in  server.scm  server.scm.in
examples/rpc/: client.scm.in  server.scm.in
libguile-ssh/: .gitignore  Makefile.am  auth.c  auth.h  callbacks.c  callbacks.h  channel-func.c  channel-main.c  channel-type.c  channel-type.h  common.c  common.h  error.c  error.h  key-func.c  key-func.h  key-main.c  key-type.c  key-type.h  log.c  log.h  message-func.c  message-main.c  message-type.c  message-type.h  server-func.c  server-func.h  server-main.c  server-type.c  server-type.h  session-func.c  session-func.h  session-main.c  session-type.c  session-type.h  sftp-dir-func.c  sftp-dir-func.h  sftp-dir-main.c  sftp-dir-type.c  sftp-dir-type.h  (+11 more)
m4/: .gitignore  guile.m4
modules/: Makefile.am
modules/srfi/: Makefile.am  srfi-64.scm
modules/ssh/: Makefile.am  agent.scm  auth.scm  channel.scm  dist.scm  key.scm  log.scm  message.scm  popen.scm  server.scm  session.scm  sftp.scm  shell.scm  tunnel.scm  version.scm
src/: Makefile.am  auth.c  auth.h  auth.scm  base64.c  base64.h  channel-func.c  channel-func.h  channel-main.c  channel-type.c  channel-type.h  channel.c  channel.h  channel.scm  common.c  common.h  error.c  error.h  key-func.c  key-func.h  key-main.c  key-type.c  key-type.h  key.scm  message-func.c  message-func.h  message-type.c  message.scm  server-func.c  server-func.h  server-main.c  server-type.c  server-type.h  server.scm  session-func.c  session-func.h  session-main.c  session-type.c  session-type.h  session.c  (+8 more)
ssh/: .gitignore  Makefile.am  auth.c  auth.h  auth.scm  base64.c  base64.h  channel-func.c  channel-func.h  channel-main.c  channel-type.c  channel-type.h  channel.scm  common.c  common.h  dist.scm  error.c  error.h  key-func.c  key-func.h  key-main.c  key-type.c  key-type.h  key.scm  log.c  log.h  log.scm  message-func.c  message-func.h  message-main.c  message-type.c  message-type.h  message.scm  server-func.c  server-func.h  server-type.c  server-type.h  server.scm  session-func.c  session-func.h  (+9 more)
tests/: .gitignore  Makefile.am  README.org  auth.scm  client-server.scm  common.scm  config  dist.scm  dsakey  dsakey.pub  key.scm  log.scm  popen.scm  rsakey.pub  server-client.scm  server.scm  session.scm  shell.scm  sssh-ssshd.scm  tunnel.scm  version.scm
tests/common/: test-server.scm
tests/keys/: ecdsakey  ecdsakey.pub  ed25519key  ed25519key.pub  encrypted-dsa-key  encrypted-dsa-key.pub  encrypted-ecdsa-key  encrypted-ecdsa-key.pub  encrypted-ed25519-key  encrypted-ed25519-key.pub  encrypted-rsa-key  encrypted-rsa-key.pub  rsakey
tests/manual/: channel-leak.scm
