AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = guile-ssh.texi

guile_ssh_TEXINFOS = \
	api-auth.texi \
	api-channels.texi \
	api-keys.texi \
	api-messages.texi \
	api-servers.texi \
	api-sessions.texi \
	api-logging.texi \
	api-version.texi \
	api-dist.texi \
	api-sftp.texi \
	api-popen.texi \
	examples.texi \
	fdl.texi \
	indices.texi
