## Config file for GNU Automake.
##
## Copyright (C) 2026 Artyom V. Poptsov <poptsov.artyom@gmail.com>
##
## This file is part of Guile-SSH.
##
## Guile-SSH is free software: you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation, either version 3 of the
## License, or (at your option) any later version.
##
## Guile-SSH is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Guile-SSH.  If not, see <http://www.gnu.org/licenses/>.

AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = guile-ssh.texi

guile_ssh_TEXINFOS = \
	api-auth.texi \
	api-agent.texi \
	api-channels.texi \
	api-tunnels.texi \
	api-keys.texi \
	api-messages.texi \
	api-servers.texi \
	api-sessions.texi \
	api-logging.texi \
	api-version.texi \
	api-dist.texi \
	api-sftp.texi \
	api-popen.texi \
	api-shell.texi \
	examples.texi \
	fdl.texi \
	indices.texi

# Makefile.am ends here.
